# anything-ai

./: LICENSE  README.md  common.py  main.py  pyproject.toml  sam.py  sd.py  utils.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: DownloadButton.tsx  Dropzone.tsx  FileUpload.tsx  ImageCanvas.tsx  Instructions.tsx  MainComponent.tsx  Tabs.tsx  TextInput.tsx  Welcome.tsx
frontend/src/app/utils/: instructions.json
