[tool.poetry]
name = "bgdiffusion"
version = "0.1.0"
description = ""
authors = ["Rachel Park <rachelsupark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
modal-client = "^0.49.2130"
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
